--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,6 @@
-FROM node:lts as builder
+FROM node:12.18.3
 WORKDIR /frontend
+COPY package*.json ./
+RUN npm install
 COPY . .
-RUN yarn build
-
-FROM node:lts as runner
-WORKDIR /frontend
-ENV NODE_ENV development
-# If you are using a custom next.config.js file, uncomment this line.
-# COPY --from=builder /frontend/next.config.js ./
-COPY --from=builder /frontend/public ./public
-COPY --from=builder /frontend/.next ./.next
-COPY --from=builder /frontend/node_modules ./node_modules
-COPY --from=builder /frontend/package.json ./package.json
-
-EXPOSE 3000
-CMD ["yarn", "start"]
+CMD ["npm", "run", "dev"]
